--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <div class="cabecalho">
         <img src="logo-helptech.png" alt="Logo HelpTech Antunes">
         <h1>HELPTECH ANTUNES</h1>
-        <p>CNPJ: 12.345.678/0001-99</p>
+        <p>CPF:400.187.518-73</p>
         <p>Avenida Luís Pereira dos Santos, 556 - Jundiaí/SP</p>
         <p>WhatsApp: (11) 95780-5217</p>
     </div>
